# azure-sphere-combo-mnist

./: .gitignore
azure-sphere-combo-mnist-hlcore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  launch.vs.json  main.c
azure-sphere-combo-mnist-hlcore/Hardware/mt3620_rdb/: sample_hardware.json
azure-sphere-combo-mnist-hlcore/Hardware/mt3620_rdb/inc/hw/: sample_hardware.h
azure-sphere-combo-mnist-hlcore/ft6x06_driver/: ft6x06.c  ft6x06.h  ft6x06_ll.c  ft6x06_ll.h
azure-sphere-combo-mnist-hlcore/ili9341_driver/: ili9341.c  ili9341.h
azure-sphere-combo-mnist-rtcore/: CMakeLists.txt  app_manifest.json  image.h  launch.vs.json  main.c  mt3620-intercore.c
